<resources>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Login</string>
    <string name="Profile_text">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="exitButton">Exit</string>
    <string name="Name_App">MobileTest</string>
    <string name="Login_button">Login</string>
    <string name="loginText">Sign Up!</string>
    <string name="UserFIO">Новикова Валерия Дмитриевна</string>
    <string name="EmailUser">valerienovikov06608@gmail.com</string>
    
</resources>