<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mydatabaseapp.userDetails.UserDetailsFragment" >


    <data>
        <variable
            name="userDelailsLayout"
            type="com.example.mydatabaseapp.userDetails.UserDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_users"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/Profile_text"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="379dp"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:paddingTop="1dp"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:hint="@string/UserFIO"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColorHint="@color/colorPrimary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/EmailUser"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColorHint="@color/colorPrimary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="@{()->userDelailsLayout.backButtonclicked()}"
                android:text="@string/exitButton"
                android:textColor="@color/colorPrimary4"
                android:textStyle="bold|italic"
                android:paddingTop="15dp"/>



        </LinearLayout>



    </LinearLayout>


</layout>